Append Grease pencil #50264

Closed
opened 2016-12-16 19:26:35 +01:00 by dono dono · 8 comments

System Information
Windows 7 64 bits Nvidia Geforce 780

Blender Version
2.78 Date 2016-12-07 22-04 Hash: 62a2ed9

Short description of error
When you append a grease pencil layer, it doesnt appear in the viewport.

Exact steps for others to reproduce the error
1/ Create a .blend with grease pencil drawing
2/ In a new blend, append this grease pencil
3/ Select the new grease pencil layer
4/ The new grease pencil doesnt appear in the viewport.

**System Information** Windows 7 64 bits Nvidia Geforce 780 **Blender Version** 2.78 Date 2016-12-07 22-04 Hash: 62a2ed9 **Short description of error** When you append a grease pencil layer, it doesnt appear in the viewport. **Exact steps for others to reproduce the error** 1/ Create a .blend with grease pencil drawing 2/ In a new blend, append this grease pencil 3/ Select the new grease pencil layer 4/ The new grease pencil doesnt appear in the viewport.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ParrotDenis

Added subscriber: @ParrotDenis

Added subscribers: @antoniov, @mont29

Added subscribers: @antoniov, @mont29
Antonio Vazquez was assigned by Bastien Montagne 2016-12-16 20:14:56 +01:00

Confirmed, looks like it’s missing some kind of update when selecting an existing GP datablock in scene (need to e.g. click on Draw gp tool to show existing strokes).

Note that this is not specific to appending/linking, just creating new empty scene and assigning GPdata to it shows same behavior.

@antoniov mind having a look? thanks.

Confirmed, looks like it’s missing some kind of update when selecting an existing GP datablock in scene (need to e.g. click on Draw gp tool to show existing strokes). Note that this is not specific to appending/linking, just creating new empty scene and assigning GPdata to it shows same behavior. @antoniov mind having a look? thanks.

Added subscriber: @CrepeC

Added subscriber: @CrepeC

This issue was referenced by 535298eea5

This issue was referenced by 535298eea5fd50a19d04ddffb05060313e32826c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks Bastien and Antonio !! :)

All the best :)
dono

Thanks Bastien and Antonio !! :) All the best :) dono
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50264
No description provided.