Fix T50264: Stroke is not painted when append Grease  Pencil block

When append a datablock the default brushes were not created and only
were created when draw new strokes. Now the default brushes are created
when draw strokes if necessary.